Fix issue where the checkboxes for each item in LCV were very briefly visible on initial page load

--- a/MemoryMosaic/wwwroot/css/components/LibraryContentViewer.css
+++ b/MemoryMosaic/wwwroot/css/components/LibraryContentViewer.css
@@ -53,12 +53,13 @@ h1 {
     position: absolute;
     margin-top: 8px;
     margin-left: 8px;
-    transition: 0.3s;
 }
 
 #libContentViewer > .spanAndRow > .row > .thumbnail > .checked {
     color: #009FFF;
+    visibility: visible;
     opacity: 1;
+    transition: 0.3s; /* These transitions can't be in .checkbox because it causes them to very briefly be visible on initial page load. */
 }
 
 #libContentViewer > .spanAndRow > .row > .thumbnail > img {
@@ -73,10 +74,12 @@ h1 {
 
 #libContentViewer > .spanAndRow > .row > .thumbnail:hover > .unchecked { /* Show checkbox on hover */
     opacity: 0.42;
+    transition: 0.3s;
 }
 
 #libContentViewer > .spanAndRow > .row > .thumbnail > .unchecked:hover {
     opacity: 1;
+    transition: 0.3s;
 }
 
 #moreContentTopDiv {
